--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -127,3 +127,8 @@ html {
     -o-transition: .25s ease-in-out;
     transition: .25s ease-in-out;
   }
+  @media(max-width:1024px){
+    .video-responsive{
+      width:100%;
+    }
+  }
